--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
         <div id="setup-screen">
             <div class="input-group">
                 <label for="meeting-time">MTG時間（分）:</label>
-                <input type="number" id="meeting-time" min="1" value="30">
+                <select id="meeting-time">
+                    <option value="5">5</option>
+                    <option value="10">10</option>
+                    <option value="15">15</option>
+                    <option value="20">20</option>
+                    <option value="25">25</option>
+                    <option value="30" selected>30</option>
+                    <option value="35">35</option>
+                    <option value="40">40</option>
+                    <option value="45">45</option>
+                    <option value="50">50</option>
+                    <option value="55">55</option>
+                    <option value="60">60</option>
+                </select>
             </div>
             <div class="input-group">
                 <label for="agenda">アジェンダ:</label>
@@ -29,7 +42,11 @@
         </div>
 
         <div id="timer-screen" style="display: none;">
-            <div id="timer-display">00:00</div>
+            <div id="timer-display">
+                <span id="timer-minutes">00</span>
+                <span>:</span>
+                <span id="timer-seconds">00</span>
+            </div>
             <div id="notification-area"></div>
             <div class="display-group">
                 <h2>アジェンダ</h2>
