--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTGタイムキーパー</title>
+    <title>MTGタイムキーパーくん</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>MTGタイムキーパー</h1>
+        <h1>MTGタイムキーパーくん</h1>
     </header>
 
     <main>
